--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <h1>　　　I Don't Need Any Calming Tea! </h1>
 
-<link rel="stylesheet" href="ogs.css">
+<link rel="stylesheet" href="main/styles.css">
 
 <div>
 
