--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 </div>
 
 <embed src="https://www.youtube.com/watch?v=KoWiHSiuZXs&ab_channel=JackTheAnimeRipper" width=480 height=270></embed>
+<p>  Golden rules by Ji Xin Wang's </p>
 
 </div>
 
