--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
 
 </div>
 
-<embed src="https://www.youtube.com/watch?v=KoWiHSiuZXs&ab_channel=JackTheAnimeRipper" width=480 height=270></embed>
-<p>  Golden rules by Ji Xin Wang's </p>
+<embed src="https://www.youtube.com/embed/KoWiHSiuZXs" width=480 height=270></embed>
 
 </div>
 
