--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
-<h1>　　　I Don't Need Any Calming Tea! </h1>
+<h1>　　　Twitch.tv/Omnifyr </h1>
 
-<link rel="stylesheet" href="main/styles.css">
+<link rel="stylesheet" type="text/css" href="https://omnifyr1200.github.io/styles.css">
 
 <div>
 
@@ -30,6 +30,4 @@
 </div>
 
 
-<a href="https://info.flagcounter.com/OJJy"><img src="https://s01.flagcounter.com/count2/OJJy/bg_FFAF69/txt_000000/border_CC1F64/columns_2/maxflags_10/viewers_0/labels_0/pageviews_0/flags_0/percent_0/" alt="Flag Counter" border="0"></a>
-
-
+<a href="https://info.flagcounter.com/OJJy"><a href="https://info.flagcounter.com/uiZN"><img src="https://s11.flagcounter.com/count2/uiZN/bg_FF9A26/txt_000000/border_CC0808/columns_2/maxflags_10/viewers_0/labels_0/pageviews_0/flags_0/percent_0/" alt="Flag Counter" border="0"></a>
