--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
 
 <embed src="https://www.youtube.com/embed/KoWiHSiuZXs" width=480 height=270></embed>
 
+<div>
+<img class="images" src="https://i.imgur.com/bv7bjXu.jpg" >
+ <img class="images" src="https://i.imgur.com/bv7bjXu.jpg" >
+
 </div>
-
-
 <a href="https://info.flagcounter.com/OJJy"><a href="https://info.flagcounter.com/uiZN"><img src="https://s11.flagcounter.com/count2/uiZN/bg_FF9A26/txt_000000/border_CC0808/columns_2/maxflags_10/viewers_0/labels_0/pageviews_0/flags_0/percent_0/" alt="Flag Counter" border="0"></a>
