--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <div>
 
-<img class="image" src="https://i.imgur.com/50XDZr9.png" align = left>
+<img class="image" src="https://img1.picmix.com/output/pic/normal/7/5/4/7/9897457_8b00b.gif" align = left>
 
 
 
