--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 
 
-<img class="image" src="https://i.imgur.com/50XDZr9.png" align = right>
+<img class="image" src="https://giffiles.alphacoders.com/560/56025.gif" align = right>
 
 
 <p>________________________________</p>
