--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 
 <div>
 
-<img class="image" src="https://img1.picmix.com/output/pic/normal/7/5/4/7/9897457_8b00b.gif" align = left>
+<img class="image" src="https://gifdb.com/images/high/scary-weird-wallpaper-wjsn8jc98ru0p51o.gif" align = left>
 
 
 
-<img class="image" src="https://giffiles.alphacoders.com/560/56025.gif" align = right>
+<img class="image" src="https://cutewallpaper.org/25/animated-wallpaper-gif-creepy/memories-of-a-madman-scary-horror-skull-wallpaper.gif" align = right>
 
 
 <p>________________________________</p>
@@ -28,8 +28,8 @@
 <embed src="https://www.youtube.com/embed/KoWiHSiuZXs" width=480 height=270></embed>
 
 <div>
-<img class="images" src="https://i.imgur.com/bv7bjXu.jpg" align = left> 
- <img class="images" src="https://i.imgur.com/bv7bjXu.jpg" align = right>
+<img class="images" src="https://img1.picmix.com/output/pic/normal/7/5/4/7/9897457_8b00b.gif" align = left> 
+ <img class="images" src="https://giffiles.alphacoders.com/560/56025.gif" align = right>
 
 </div>
 <a href="https://info.flagcounter.com/OJJy"><a href="https://info.flagcounter.com/uiZN"><img src="https://s11.flagcounter.com/count2/uiZN/bg_FF9A26/txt_000000/border_CC0808/columns_2/maxflags_10/viewers_0/labels_0/pageviews_0/flags_0/percent_0/" alt="Flag Counter" border="0"></a>
