--- a/index.html
+++ b/index.html
@@ -35,6 +35,6 @@
 <a href="https://info.flagcounter.com/OJJy"><a href="https://info.flagcounter.com/uiZN"><img src="https://s11.flagcounter.com/count2/uiZN/bg_FF9A26/txt_000000/border_CC0808/columns_2/maxflags_10/viewers_0/labels_0/pageviews_0/flags_0/percent_0/" alt="Flag Counter" border="0"></a>
 
  <audio controls autoplay>
-  <source src="https://archive.org/details/tvtunes_20712" type="audio/ogg">
+  <source src="https://www.myinstants.com/media/sounds/gta-san-andreas-mission-complete-sound-hq.mp3" type="audio/mpeg">
   Your browser does not support the audio element.
 </audio>
