--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <embed src="https://www.youtube.com/embed/KoWiHSiuZXs" width=480 height=270></embed>
 
 <div>
-<img class="images" src="https://img1.picmix.com/output/pic/normal/7/5/4/7/9897457_8b00b.gif" align = left> 
+<img class="images" src="https://cdnb.artstation.com/p/assets/images/images/052/586/091/original/cecihoney-dragon-flight.gif?1660165746" align = left> 
  <img class="images" src="https://giffiles.alphacoders.com/560/56025.gif" align = right>
 
 </div>
