--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <embed src="https://www.youtube.com/embed/KoWiHSiuZXs" width=480 height=270></embed>
 
 <div>
-<img class="images" src="https://cdnb.artstation.com/p/assets/images/images/052/586/091/original/cecihoney-dragon-flight.gif?1660165746" align = left> 
+<img class="images" src="https://steamuserimages-a.akamaihd.net/ugc/784121940640997581/FF287D3D2B94DD6AED5D5561BC91A98C15012BF0/?imw=5000&imh=5000&ima=fit&impolicy=Letterbox&imcolor=%23000000&letterbox=false" align = left> 
  <img class="images" src="https://giffiles.alphacoders.com/560/56025.gif" align = right>
 
 </div>
