--- a/index.html
+++ b/index.html
@@ -4,36 +4,43 @@
 
 <div>
 
-<img class="image" src="https://gifdb.com/images/high/scary-weird-wallpaper-wjsn8jc98ru0p51o.gif" align = left>
+<img class="image" src="https://i.imgur.com/50XDZr9.png" align = left>
 
 
 
-<img class="image" src="https://cutewallpaper.org/25/animated-wallpaper-gif-creepy/memories-of-a-madman-scary-horror-skull-wallpaper.gif" align = right>
+<img class="image" src="https://i.imgur.com/50XDZr9.png" align = right>
 
 
 <p>________________________________</p>
 <p>________________________________</p>
 
-<p>The player who holds a stone in his hand and is indecisive as where to play, will not win the game.</p>
 <p>Don't just place each stone like a doll. Try to feel the flow of my moves.</p>
-<p>Maybe I should just quit and go back to making noodles.</p>
+<p>The player who holds a stone in his hand and is indecisive as where to play, will not win the game.</p>
 
+<p>________________________________</p> 
+<p>________________________________</p> 
 
-<p>________________________________</p><h4><a  class="camille" href="https://www.twitch.tv/omnifyr"> ____Omnifyr____</a></h4>
-
-
+<h4><a  class="camille" href="https://www.twitch.tv/omnifyr"> ____Omnifyr____</a></h4>
 
 </div>
-
-<embed src="https://www.youtube.com/embed/KoWiHSiuZXs" width=480 height=270></embed>
+<img class="images" src="https://i.pinimg.com/originals/b4/17/ce/b417ceb56cc6f768c70d671542292b8e.gif" align = left> 
+<img class="images" src="https://i.pinimg.com/originals/7b/fa/ff/7bfaffda53a0fcf09b3270a2addd298d.gif" align = left>
+<img class="images" src="https://i.pinimg.com/originals/b4/17/ce/b417ceb56cc6f768c70d671542292b8e.gif" align = left> 
+<img class="images" src="https://i.pinimg.com/originals/b4/17/ce/b417ceb56cc6f768c70d671542292b8e.gif" align = right>
+<img class="images" src="https://i.pinimg.com/originals/7b/fa/ff/7bfaffda53a0fcf09b3270a2addd298d.gif" align = right> 
+<img class="images" src="https://i.pinimg.com/originals/b4/17/ce/b417ceb56cc6f768c70d671542292b8e.gif" align = right>
+<embed src="https://www.youtube.com/embed/UkOsL0YLQ-g?autoplay=1&mute=1" width=240 height=135></embed>
 
 <div>
-<img class="images" src="https://steamuserimages-a.akamaihd.net/ugc/784121940640997581/FF287D3D2B94DD6AED5D5561BC91A98C15012BF0/?imw=5000&imh=5000&ima=fit&impolicy=Letterbox&imcolor=%23000000&letterbox=false" align = left> 
- <img class="images" src="https://giffiles.alphacoders.com/560/56025.gif" align = right>
+<img class="images" src="https://giffiles.alphacoders.com/212/212899.gif" align = left> 
+<img class="images" src="https://img1.picmix.com/output/pic/normal/8/7/7/9/9229778_c2a43.gif" align = left> 
+<img class="images" src="https://img1.picmix.com/output/pic/normal/8/8/2/3/10133288_318a1.gif" align = left> 
+ <img class="images" src="https://giffiles.alphacoders.com/212/212899.gif" align = right>
+ <img class="images" src="https://img1.picmix.com/output/pic/normal/8/7/7/9/9229778_c2a43.gif" align = right>
+<img class="images" src="https://img1.picmix.com/output/pic/normal/8/8/2/3/10133288_318a1.gif" align = right>
+
 
 </div>
-<a href="https://info.flagcounter.com/OJJy"><a href="https://info.flagcounter.com/uiZN"><img src="https://s11.flagcounter.com/count2/uiZN/bg_FF9A26/txt_000000/border_CC0808/columns_2/maxflags_10/viewers_0/labels_0/pageviews_0/flags_0/percent_0/" alt="Flag Counter" border="0"></a>
 
- <audio controls autoplay>
-  <source src="https://www.myinstants.com/media/sounds/gta-san-andreas-mission-complete-sound-hq.mp3" type="audio/mpeg">
-</audio>
+
+<a href="https://info.flagcounter.com/OJJy"><a href="https://info.flagcounter.com/uiZN"><img src="https://s11.flagcounter.com/count2/uiZN/bg_FF9A26/txt_000000/border_CC0808/columns_2/maxflags_10/viewers_0/labels_0/pageviews_0/flags_0/percent_0/" alt="Flag Counter" border="0"></a>
