--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
 <h4><a  class="camille" href="https://www.twitch.tv/omnifyr"> ____Omnifyr____</a></h4>
 
 </div>
-<img class="images" src="https://i.pinimg.com/originals/b4/17/ce/b417ceb56cc6f768c70d671542292b8e.gif" align = left style="max-width: 60px;"> 
-<img class="images" src="https://i.pinimg.com/originals/7b/fa/ff/7bfaffda53a0fcf09b3270a2addd298d.gif" align = left style="max-width: 60px;">
-<img class="images" src="https://i.pinimg.com/originals/b4/17/ce/b417ceb56cc6f768c70d671542292b8e.gif" align = left style="max-width: 60px;"> 
-<img class="images" src="https://i.pinimg.com/originals/b4/17/ce/b417ceb56cc6f768c70d671542292b8e.gif" align = right style="max-width: 60px;">
-<img class="images" src="https://i.pinimg.com/originals/7b/fa/ff/7bfaffda53a0fcf09b3270a2addd298d.gif" align = right style="max-width: 60px;"> 
-<img class="images" src="https://i.pinimg.com/originals/b4/17/ce/b417ceb56cc6f768c70d671542292b8e.gif" align = right style="max-width: 60px;">
+<img class="images" src="https://i.pinimg.com/originals/b4/17/ce/b417ceb56cc6f768c70d671542292b8e.gif" align = left > 
+<img class="images" src="https://i.pinimg.com/originals/7b/fa/ff/7bfaffda53a0fcf09b3270a2addd298d.gif" align = left >
+<img class="images" src="https://i.pinimg.com/originals/b4/17/ce/b417ceb56cc6f768c70d671542292b8e.gif" align = left > 
+<img class="images" src="https://i.pinimg.com/originals/b4/17/ce/b417ceb56cc6f768c70d671542292b8e.gif" align = right >
+<img class="images" src="https://i.pinimg.com/originals/7b/fa/ff/7bfaffda53a0fcf09b3270a2addd298d.gif" align = right > 
+<img class="images" src="https://i.pinimg.com/originals/b4/17/ce/b417ceb56cc6f768c70d671542292b8e.gif" align = right >
 <embed src="https://www.youtube.com/embed/UkOsL0YLQ-g?autoplay=1&mute=1" width=240 height=135></embed>
 
 <div>
