--- a/index.html
+++ b/index.html
@@ -1,52 +1,41 @@
 <h1>　　　Twitch.tv/Omnifyr </h1>
 
-<div>
-    <img src="https://i.imgur.com/f0L53M0.gif" alt="your-gif-alt-text-here">
-  </div>
+<link rel="stylesheet" type="text/css" href="https://omnifyr1200.github.io/styles.css"> 
 
-<link rel="stylesheet" type="text/css" href="https://omnifyr1200.github.io/styles.css">
+<div> <img class="image" src="https://cdnb.artstation.com/p/assets/images/images/002/613/513/large/hye-yang-ji-tddd233.jpg?1463656213" align = left>
 
-<div>
+<img class="image" src="https://cdnb.artstation.com/p/assets/images/images/002/613/513/large/hye-yang-ji-tddd233.jpg?1463656213" align = right> 
 
-<img class="image" src="https://i.imgur.com/50XDZr9.png" align = left>
+<p>---------------------------------</p> 
 
+<h4><a class="camille" href="https://online-go.com/player/401496/"> <p>Main Account: Omnifyr</p></a></h4>
 
-
-<img class="image" src="https://i.imgur.com/50XDZr9.png" align = right>
-
-<p>Don't just place each stone like a doll. Try to feel the flow of the moves.</p>
 <p>---------------------------------</p>
+
+<p>Don't just place each stone like a doll. Try to feel the flow of the moves.</p> 
+
+<p>---------------------------------</p> 
+
 <p>The player who holds a stone in his hand and is indecisive as where to play, will not win the game.</p>
+
+<p>---------------------------------</p> 
+
+<p>People in glass houses shouldn't throw stones</p>
+
 <p>---------------------------------</p>
-<p>People in glass houses shouldn't throw stones</p> 
-<p>---------------------------------</p>
-<p>It's better to live in sente than to die in gote.</p> 
 
-<h4><a  class="camille" href="https://www.twitch.tv/omnifyr"> ____Omnifyr____</a></h4>
+<h4><a class="camille" href="https://online-go.com/player/401496/"> 
 
-</div>
-<img class="images" src="https://i.pinimg.com/originals/b4/17/ce/b417ceb56cc6f768c70d671542292b8e.gif" align = left> 
-<img class="images" src="https://i.pinimg.com/originals/7b/fa/ff/7bfaffda53a0fcf09b3270a2addd298d.gif" align = left>
-<img class="images" src="https://i.pinimg.com/originals/b4/17/ce/b417ceb56cc6f768c70d671542292b8e.gif" align = left> 
-<img class="images" src="https://i.pinimg.com/originals/b4/17/ce/b417ceb56cc6f768c70d671542292b8e.gif" align = right>
-<img class="images" src="https://i.pinimg.com/originals/7b/fa/ff/7bfaffda53a0fcf09b3270a2addd298d.gif" align = right> 
-<img class="images" src="https://i.pinimg.com/originals/b4/17/ce/b417ceb56cc6f768c70d671542292b8e.gif" align = right>
-<embed src="https://www.youtube.com/embed/UkOsL0YLQ-g?autoplay=1&mute=1" width=240 height=135></embed>
+<p>Main Account: Omnifyr</p></a></h4> 
 
-<div>
-<img class="images" src="https://giffiles.alphacoders.com/212/212899.gif" align = left> 
-<img class="images" src="https://img1.picmix.com/output/pic/normal/8/7/7/9/9229778_c2a43.gif" align = left> 
-<img class="images" src="https://img1.picmix.com/output/pic/normal/8/8/2/3/10133288_318a1.gif" align = left> 
- <img class="images" src="https://giffiles.alphacoders.com/212/212899.gif" align = right>
- <img class="images" src="https://img1.picmix.com/output/pic/normal/8/7/7/9/9229778_c2a43.gif" align = right>
-<img class="images" src="https://img1.picmix.com/output/pic/normal/8/8/2/3/10133288_318a1.gif" align = right>
+<p>---------------------------------</p> 
+
+</div> <div> <img class="image" src="https://cdnb.artstation.com/p/assets/images/images/002/613/513/large/hye-yang-ji-tddd233.jpg?1463656213" align = left> 
+
+<img class="image" src="https://cdnb.artstation.com/p/assets/images/images/002/613/513/large/hye-yang-ji-tddd233.jpg?1463656213" align = right> 
+
+<img class="gif" src="https://i.imgur.com/qmlAdoC.gif" align = center> </div> <div> <a href="https://info.flagcounter.com/XkvM">
+
+<img src="https://s01.flagcounter.com/count2/XkvM/bg_080808/txt_FFFFFF/border_CCCCCC/columns_7/maxflags_35/viewers_0/labels_0/pageviews_0/flags_0/percent_0/" alt="Flag Counter" border="0" align = center></a> </div>
 
 
-</div>
-
-
-<a href="https://info.flagcounter.com/OJJy"><a href="https://info.flagcounter.com/uiZN"><img src="https://s11.flagcounter.com/count2/uiZN/bg_FF9A26/txt_000000/border_CC0808/columns_2/maxflags_10/viewers_0/labels_0/pageviews_0/flags_0/percent_0/" alt="Flag Counter" border="0"></a>
-
-<div class="img-container">
-    <img src="https://www.nicepng.com/png/full/31-317452_clipart-dragon-realistic-dragon-png.png" align = left alt="your-gif-alt-text-here">
-  </div>
