--- a/index.html
+++ b/index.html
@@ -1,41 +1,84 @@
-<h1>　　　Twitch.tv/Omnifyr </h1>
-
-<link rel="stylesheet" type="text/css" href="https://omnifyr1200.github.io/styles.css"> 
-
-<div> <img class="image" src="https://cdnb.artstation.com/p/assets/images/images/002/613/513/large/hye-yang-ji-tddd233.jpg?1463656213" align = left>
-
-<img class="image" src="https://cdnb.artstation.com/p/assets/images/images/002/613/513/large/hye-yang-ji-tddd233.jpg?1463656213" align = right> 
-
-<p>---------------------------------</p> 
-
-<h4><a class="camille" href="https://online-go.com/player/401496/"> <p>Main Account: Omnifyr</p></a></h4>
-
-<p>---------------------------------</p>
-
-<p>Don't just place each stone like a doll. Try to feel the flow of the moves.</p> 
-
-<p>---------------------------------</p> 
-
-<p>The player who holds a stone in his hand and is indecisive as where to play, will not win the game.</p>
-
-<p>---------------------------------</p> 
-
-<p>People in glass houses shouldn't throw stones</p>
-
-<p>---------------------------------</p>
-
-<h4><a class="camille" href="https://online-go.com/player/401496/"> 
-
-<p>Main Account: Omnifyr</p></a></h4> 
-
-<p>---------------------------------</p> 
-
-</div> <div> <img class="image" src="https://cdnb.artstation.com/p/assets/images/images/002/613/513/large/hye-yang-ji-tddd233.jpg?1463656213" align = left> 
-
-<img class="image" src="https://cdnb.artstation.com/p/assets/images/images/002/613/513/large/hye-yang-ji-tddd233.jpg?1463656213" align = right> 
-
-<img class="gif" src="https://i.imgur.com/qmlAdoC.gif" align = center> </div> <div> <a href="https://info.flagcounter.com/XkvM">
-
-<img src="https://s01.flagcounter.com/count2/XkvM/bg_080808/txt_FFFFFF/border_CCCCCC/columns_7/maxflags_35/viewers_0/labels_0/pageviews_0/flags_0/percent_0/" alt="Flag Counter" border="0" align = center></a> </div>
 
 
+
+<link rel="stylesheet" type="text/css" href="https://omnifyr1200.github.io/TechNgo/styles.css">
+
+<div>
+
+<img class="image" src="https://i.imgur.com/1HfzvPy.png" align = left>
+
+
+
+<img class="image" src="https://i.imgur.com/1HfzvPy.png" align = right>
+
+
+
+
+
+(Switch your OGS to Dark Mode for the best profile experience.)
+
+---------------------------------
+Welcome to my Online Go Dojo
+---------------------------------
+I am a professional Go instructor ranked as <b>6 dan Fox , 3 dan OGS</b>. And i offer affordable Teaching Games / Reviews.  
+---------------------------------
+(Scroll down for more information.)
+
+---------------------------------
+
+
+<div>
+
+<b>Are you a 30-10 kyu player?</b>
+
+<p align = left>If so, you might feel a bit lost on your journey and may even at times question whether Go is even for you or not. In truth, like most double digit kyus, you only lack the fundamental understanding of the game, which can get you up to single digit kyus in no time. These include:
+
+<b><p align = left>-	Fundamentals of Life and Death</p></b>
+<b><p align = left>-	Basic Shapes</p></b>
+<b><p align = left>-	Opening Theory</p></b>
+
+<b>If, on the other hand, you are a 10-2 kyu player...</b>
+
+<p align = left>You most likely already have a solid understanding of the game but feel stuck at a personal plateau. This shows that you have significant blind spots in your game and probably some bad habits that require guidance & intervention. Remember, no one becomes a master without one. Consider if you feel fully proficient in the below topics:</p>
+
+<b><p align = left>-	The Balance of Territory and Influence</p></b>
+<b><p align = left>-	Local Efficiency: Shape and Tesuji</p></b>
+<b><p align = left>-	The Concept of Positional Judgement</p></b>
+<b><p align = left>-	The concept of Sabaki and Aji</p></b>
+<b><p align = left>-	The direction of play</p></b>
+
+<p align = left> So, Whether you are a beginner or an intermediate learning from an Instructor will definitely increase your learning curve.</p>
+
+<p align = left>I've had the pleasure of helping many students make progress in their ranks. By guiding them to understand the core principles of the game, create effective strategies, and apply them consistently during matches. I'd love to offer my support as you work towards becoming a Dan player. </p>
+
+---------------------------------
+
+Pricings
+---------------------------------
+1-on-1 Teaching game + review for </b>20€<b>/1.5hours.
+---------------------------------
+
+Game review for <b>8€</b>/30mins. 
+---------------------------------
+
+!!!  5 Teaching Games for <s>100€</s> <b style="color:green">80€</b>   !!!
+---------------------------------
+
+If you're interested in learning more about my lessons, feel free to send me a direct message or join our <a  class="camille" href="https://discord.com/invite/Xc8P89daAN"> Discord Server</a>.</p>
+---------------------------------
+
+---------------------------------
+Student Reviews
+---------------------------------
+</div>
+
+<div>
+
+
+<img class="image2" src="https://i.imgur.com/NYnIeYs.png" align = center>
+</div>
+
+---------------------------------
+<div>
+<a href="https://info.flagcounter.com/XkvM"><img src="https://s01.flagcounter.com/count2/XkvM/bg_080808/txt_FFFFFF/border_CCCCCC/columns_7/maxflags_35/viewers_0/labels_0/pageviews_0/flags_0/percent_0/" alt="Flag Counter" border="0" align = center></a>
+</div>
