--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 
 
 
-<link rel="stylesheet" type="text/css" href="https://omnifyr1200.github.io/omnifyr1200.github.io
+<link rel="stylesheet" type="text/css" href="https://omnifyr1200.github.io/techngo
 /styles.css">
 
 <div>
