--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 
 
 
-<link rel="stylesheet" type="text/css" href="https://omnifyr1200.github.io/techngo
+<link rel="stylesheet" type="text/css" href="https://omnifyr1200.github.io/TechNgo
+
 /styles.css">
 
 <div>
